# Highcool

./: README.md  pyproject.toml
highcool_components/: hooks.py  modules.txt  patches.txt
highcool_components/fixtures/: custom_field.json
highcool_components/highcool_component_management/: api.py
highcool_components/highcool_component_management/doctype/item_component_row/: item_component_row.json  item_component_row.py
highcool_components/highcool_component_management/doctype/supplier_missing_component/: supplier_missing_component.json  supplier_missing_component.py
highcool_components/highcool_component_management/doctype/supplier_missing_component_resolution/: supplier_missing_component_resolution.json  supplier_missing_component_resolution.py
highcool_components/highcool_component_management/doctype/supplier_missing_component_resolution_allocation/: supplier_missing_component_resolution_allocation.json  supplier_missing_component_resolution_allocation.py
highcool_components/highcool_component_management/doctype/supplier_missing_component_resolution_item/: supplier_missing_component_resolution_item.json  supplier_missing_component_resolution_item.py
highcool_components/highcool_component_management/events/: purchase_receipt_events.py
highcool_components/highcool_component_management/patches/: cleanup_legacy_component_tracking.py  convert_pr_component_receipts_to_json.py
highcool_components/highcool_component_management/public/js/: item.js  (+3 more)
highcool_components/highcool_component_management/utils/: component_helpers.py  resolution_service.py
