[project]
name = "highcool_components"
authors = [{ name = "Highcool", email = "dev@example.com" }]
description = "Component-based inventory and FIFO sales validation for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
